# world-graph

./: README.md  pyproject.toml  requirements.txt
scripts/: demo_eval.py  demo_train.py  train.py
tests/: test_gnn_transition.py  test_shapes.py
worldgraph/: __init__.py  config.py
worldgraph/output/: __init__.py  recommender.py
worldgraph/perception/: __init__.py  detector.py
worldgraph/planning/: __init__.py  imagination.py  scoring.py
worldgraph/scene_graph/: __init__.py  graph_types.py  hydra_converter.py  hydra_json_parser.py  node_encoder.py
worldgraph/world_model/: __init__.py  action_encoder.py  encoder.py  gnn_transition.py  transition.py
